# ArkLibCPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: ArkCLP.cpp  ArkCLP.hpp  ArkDatabaseInterface.hpp  ArkDatabaseMySQL.cpp  ArkDatabaseMySQL.hpp  CMakeLists.txt  main.cpp
unittests/: ArkCLP_test.cpp  ArkCLP_test.hpp  ArkDBMySQL_test.cpp  ArkDBMySQL_test.hpp  CMakeLists.txt  gtest.cpp
